Update analytics and location controllers with new endpoints